Code smell fixes part 1 (#2244)
* Code smells fix part1 - low smells

* fixed more code smells, final changes in part1

* checkstyle changes

* removed unneeded initialisers

* removed unneeded imports

---------

Co-authored-by: yogesh-hullatti <53007108+yogesh-hullatti@users.noreply.github.com>